build: add jvm parameteres to java unit test in transpiler lib